# ai-idea

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260528_0001_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: admin_collectors.py  backtests.py  health.py  matches.py  model_stats.py  odds_movement.py  value_bets.py
apps/api/app/collectors/: __init__.py  base.py  fixtures_collector.py  odds_collector.py
apps/api/app/core/: config.py  database.py
apps/api/app/db/: __init__.py  seed.py
apps/api/app/models/: __init__.py  domain.py
apps/api/app/providers/: fixtures.py  football_data.py
apps/api/app/repositories/: analytics.py
apps/api/app/schemas/: analytics.py
apps/api/app/services/: analytics_service.py  mock_repository.py  value_engine.py
apps/api/tests/: test_backtesting.py  test_collectors.py  test_value_engine.py
apps/web/: Dockerfile  next.config.mjs  package.json  tsconfig.tsbuildinfo
apps/web/messages/: en.json  ru.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.scss  layout.tsx  page.tsx
apps/web/src/hooks/: use-api-resource.ts
apps/web/src/i18n/: request.ts
apps/web/src/lib/: api.ts  mock-data.ts
apps/web/src/store/: dashboard-store.ts
apps/web/src/types/: analytics.ts
docs/: api-contracts.md  architecture.md  data-model.md
infra/: nginx.conf
(+26 files in other folders)
