[project]
name = "football-value-api"
version = "0.1.0"
description = "FastAPI service for football value betting analytics"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "apscheduler>=3.11.0",
  "fastapi>=0.115.6",
  "pandas>=2.2.3",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "redis>=5.2.1",
  "scikit-learn>=1.6.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
ml = [
  "catboost>=1.2.7",
  "numpy>=2.2.1",
  "xgboost>=2.1.3"
]
dev = [
  "mypy>=1.14.1",
  "pytest>=8.3.4",
  "ruff>=0.8.4"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
